# axioma-actividad

./: README.md  pyproject.toml
backend/: pyproject.toml  setup_fixture.json
backend/banco/: settings.py  urls.py
backend/banco/accounts/: apps.py  models.py  serializers.py
backend/banco/accounts/migrations/: 0001_initial.py  0002_initial.py  0003_alter_account_owner.py
backend/banco/users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/banco/users/migrations/: 0001_initial.py  0002_remove_user_username.py  0003_alter_user_dni_alter_user_is_staff_alter_user_names_and_more.py  0004_user_failed_login_attempts.py
banco/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.js
frontend/src/components/: Footer.jsx  Header.jsx  LoginBox.css  LoginBox.jsx
frontend/src/utils/: auth.js  userContext.js
frontend/src/views/: AccountPage.css  AccountPage.jsx  HomePage.jsx
